--- a/index.html
+++ b/index.html
@@ -48,22 +48,41 @@
                       placeholder="...">
                   </div>
                   <p></p>
-                  <button type="button" onclick="keresesKeresoSzora()" class="btn btn-primary">Kereses</button>
+                  <button type="button" onclick="keresesKeresoSzora()"
+                    class="btn btn-primary">Kereses</button>
                 </form>
 
               </div>
               <div
                 class="col-lg-8  col-md-12 col-sm-12  justify-content-end">
-                <div class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="..." alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the
-                      card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="container">
+                  <div class="container">
+                    <div class="row" id="cardHolder">
+
+                      <div class="col-lg-3 col-md-4 col-sm-6">
+                        <div class="card mb-3">
+                          <img class="card-img-top" src="..."
+                            alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">Card 10</h5>
+                            <p class="card-text">Some quick example text to
+                              build on the card title and make up the bulk of
+                              the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- End repeat block -->
+                    </div>
                   </div>
+
+                  <!-- Repeat the following block for each card -->
+                  <!-- End repeat block -->
+
                 </div>
+
               </div>
+
             </div>
           </div>
 
@@ -84,13 +103,5 @@
       </div>
     </main>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-      crossorigin="anonymous"></script>
   </body>
 </html>
