mar kirja a kartyakat

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="1ofmany.ico" type="image/x-icon">
     <script src="script.js"></script>
+    
     <title>Nagy Csanad</title>
   </head>
   <body>
@@ -46,8 +47,8 @@
                     <input type="text" class="form-control"
                       id="keresettSzoInput"
                       placeholder="...">
-                  </div>
-                  <p></p>
+                    </div>
+                    <p id="talalatok"></p>
                   <button type="button" onclick="keresesKeresoSzora()"
                     class="btn btn-primary">Kereses</button>
                 </form>
@@ -59,19 +60,7 @@
                   <div class="container">
                     <div class="row" id="cardHolder">
 
-                      <div class="col-lg-3 col-md-4 col-sm-6">
-                        <div class="card mb-3">
-                          <img class="card-img-top" src="..."
-                            alt="Card image cap">
-                          <div class="card-body">
-                            <h5 class="card-title">Card 10</h5>
-                            <p class="card-text">Some quick example text to
-                              build on the card title and make up the bulk of
-                              the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                          </div>
-                        </div>
-                      </div>
+                      
                       <!-- End repeat block -->
                     </div>
                   </div>
