vizsgara leadhato alapotban van

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="1ofmany.ico" type="image/x-icon">
     
-    <title>Nagy Csanad</title>
+    <title>Én Kicsi Filmklubom</title>
   </head>
   <body>
     <main>
@@ -84,7 +84,7 @@
           design változhat még.
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12">
-          © Nagy Csanad 2023-2024. Minden jog fenntartva
+          © C6BM4C 2023-2024. Minden jog fenntartva
         </div>
       </div>
     </footer>
